--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 </ol>
 <br>
-<%= link_to "+ Nueva lista", lists_new_path %>
+<%= link_to "+ Nueva lista", new_list_path %>
 <%# pe = <%=  %>
 
 <%# er = <%  %>
