--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,7 +2,7 @@
 <h2>New</h2>
 <%= simple_form_for [@list] do |f| %>
   <%= f.input :name %>
-  <%= f.submit "Create List", class: "btn btn-primary" %>
+  <%= f.submit "Crear List", class: "btn btn-primary" %>
 <% end %>
 
 <br>
