--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,17 @@
 <h2>Show</h2>
 
 <%= @list.name %>
+<ul>
+<% @bookmarks.each do |bookm| %>
+<li>
+  <strong><%= bookm.movie.title %></strong><br>
+  Comentario: <%= bookm.comment %><br>
+  <%= link_to "- Borrar comentario", bookmark_path(bookm.id), method: :delete %>
+  </li>
+<% end %>
+</ul>
+
+<br>
+<%= link_to "+ Add bookmark", new_list_bookmark_path(@list) %>
 <br>
 <%= link_to "Volver", lists_path %>
